<resources>
    <string name="app_name">DemoApp</string>
    <string name="signin">Login</string>
    <string name="signout">Sign Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_sucess">Sucess</string>
    <string name="sign_up">Signup Now</string>
    <string name="signup_det">Sign up</string>
    <string name="sign_in_page">Already have an account? Sign in</string>
    <string name="regex_error">Please enter a valid email address</string>
    <string name="empty_string_error">This field is empty</string>

    <string name="enter_phoneno"> Enter Phone Number</string>
    <string name="enter_otp">OTP</string>
    <string name="send_code">Send Code</string>
    <string name="india_code">+91</string>
    <string name="some_error">There was some error!</string>

    <string name="facebook_app_id">1921547267863638</string>
    <string name="fb_login_protocol_scheme">fb1921547267863638</string>
    <string name="code_verify">Verify Code</string>
    <string name="tag_line">Get Personalized experience and Travel Offers</string>
    <string name="heading_login">Login Now!</string>
    <string name="new_signin">New to MakeMy Trip ?</string>
    <string name="heading_signup">Signup Now!</string>
    <string name="tag_line_signup">Save big on exclusive offers! Login to claim you bonus money reward in wallet.</string>
    <string name="hint_password_min6">Password (minimum 6 characters)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="referrral_code">Referral Code(Optional)</string>
</resources>
