<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sakshi.demoapp.PhoneAuthActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linear_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_margin="4sp">

        <TextView
            android:layout_weight="1"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:text="@string/india_code"
            android:paddingTop="6sp"
            android:textSize="15sp"/>

        <EditText
            android:layout_weight="8"
            android:id="@+id/ed_phone_number"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/enter_phoneno"
            android:inputType="phone"
            android:layout_marginRight="8dp"

            />

        <ProgressBar
            android:layout_weight="1"
            android:id="@+id/progressbar_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:weightSum="10"
        android:id="@+id/linear_layout_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">


        <EditText
            android:layout_weight="9"
            android:id="@+id/ed_otp_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            android:inputType="number"/>

        <ProgressBar
            android:id="@+id/progressbar_code"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            />

    </LinearLayout>


        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_code"/>

       <TextView
           android:id="@+id/tv_some_error"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/some_error"
           android:textColor="@color/Red"
           android:visibility="invisible"/>

</LinearLayout>
