<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sakshi.demoapp.MainActivity">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="120dp"
        android:paddingTop="20dp"
        android:text="@string/heading_login"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_margin="10sp"
        android:paddingLeft="10dp"
        android:text="@string/tag_line"
        android:textAlignment="center"
        android:textSize="15sp" />

    <android.support.v7.widget.CardView
        android:layout_width="350dp"
        android:layout_height="280dp"
        app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fb_google_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="40dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_signin_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.google.android.gms.common.SignInButton>
 ??
            <com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="4">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapperemail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:errorEnabled="true">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:hint="@string/email"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapperpassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/b_signin"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="4dp"
                android:text="@string/signin" />
        </LinearLayout>

    </LinearLayout>

    </android.support.v7.widget.CardView>

<Button
android:id="@+id/b_signup"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:text="@string/sign_up" />


    </LinearLayout>


<LinearLayout
android:id="@+id/signup_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:visibility="invisible">

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="40sp"
    android:text="I am in signup" />


<android.support.design.widget.TextInputLayout
    android:id="@+id/s_wrapperemail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:errorEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:id="@+id/s_wrapperpassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:errorEnabled="true"
    app:passwordToggleEnabled="true">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/signup_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

</android.support.design.widget.TextInputLayout>

<Button
    android:id="@+id/signup_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:text="@string/signup_det" />

<Button
    android:id="@+id/back_Login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:text="@string/sign_in_page" />

</LinearLayout>

    </RelativeLayout>
